# ae3200-dse-g15

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/workflows/: autorun-black.yml  tests.yml
HumanAir/: BreakingCheck.py  aircraft_data.py  isa.py  main.py  unit_conversions.py
HumanAir/Aerodynamic Design/: Aerodynamics_Main.py  FX_63-137_AirfoilData.json  FlowParameters.py  LongitudinalStability.py  PlanformDesign.py
HumanAir/AerodynamicData/: 26-Wing_AirfoilCm.txt  26-Wing_InducedDrag.txt  26-Wing_LocalLiftCoeff.txt  26-Wing_TotalCm.txt  Wing_AirfoilCm.txt  Wing_InducedDrag.txt  Wing_LocalLiftCoeff.txt  Wing_TotalCm.txt
HumanAir/AerodynamicDesign/: Aerodynamics_Main.py  AileronSizing.py  FlapsDesign.py  FlowParameters.py  (+5 more)
LoadingDiagram/: Equations.py  Main.py  Parameters.py
tests/: test_Aerodynamics_Main.py  test_AileronSizing.py  test_BrakingCheck.py  test_Class_II_Weight.py  test_Class_I_Estimation_main.py  test_Class_I_Weight_Estimation  test_Class_I_Weight_Estimation.py  test_Equations.py  test_FlapsDesign.py  test_FlowParameters.py  test_FuselageSizing.py  test_LoadDistributions.py  test_LongitudinalStability.py  test_PlanformDesign.py  test_WP_WS.py  test_WeathercockStability.py  test_WingStructure.py  test_aerodynamic_isa.py  test_co2v2.py  test_conceptual_co2.py  test_conceptual_financial_analysis.py  test_design_values.py  test_get_flight_distribution.py  test_isa.py  test_main.py  test_optimisation.py  test_payload-range.py  test_payload_range.py  test_unit_conversions.py  test_weight_fractions.py
(+138 files in other folders)
